--- a/.github/workflows/test-pandana2.yml
+++ b/.github/workflows/test-pandana2.yml
@@ -28,7 +28,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install -r requirements.txt -r requirements-dev.txt
         python setup.py install
     - name: Lint with flake8
       run: |
